<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

    <TextView
            android:layout_alignParentTop="true"
            android:text="@string/textView1"
            android:textSize="30sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:id="@+id/textView"/>

    <Button
            android:layout_toStartOf="@id/imageButton"
            android:layout_below="@id/textView"
            android:text="@string/button2"
            android:layout_columnWeight="1"
            android:textAlignment="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:id="@+id/button2"/>

    <ImageButton
            android:layout_below="@id/textView"
            android:layout_alignParentEnd="true"
            android:layout_columnWeight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" app:srcCompat="@drawable/flag" android:id="@+id/imageButton"/>

    <CheckBox
            android:layout_below="@id/imageButton"
            android:text="@string/checkbox1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/checkBox" android:layout_columnWeight="100"/>

    <Switch
            android:layout_below="@id/imageButton"
            android:layout_alignParentEnd="true"
            android:text="@string/switch1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/switch1" android:layout_columnWeight="1"/>

    <EditText
            android:layout_below="@id/checkBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:text="@string/editText1"
            android:ems="10"
            android:id="@+id/editText"/>
</RelativeLayout>