<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:rowCount="4"
            android:columnCount="2">
    <TextView
            android:text="@string/textView1"
            android:layout_row="0"
            android:layout_column="0"
            android:layout_columnSpan="2"
            android:textSize="30sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:id="@+id/textView"/>

    <Button
            android:text="@string/button2"
            android:layout_row="1"
            android:layout_column="0"
            android:layout_columnWeight="8"
            android:textAlignment="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/button2"/>

    <ImageButton
            android:layout_row="1"
            android:layout_column="1"
            android:layout_columnWeight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" app:srcCompat="@drawable/flag" android:id="@+id/imageButton"/>

    <CheckBox
            android:layout_row="2"
            android:layout_column="0"
            android:text="@string/checkbox1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/checkBox" android:layout_columnWeight="100"/>

    <Switch
            android:layout_row="2"
            android:layout_column="1"
            android:text="@string/switch1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/switch1" android:layout_columnWeight="1"/>

    <EditText
            android:layout_row="3"
            android:layout_column="0"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_columnSpan="2"
            android:inputType="textPersonName"
            android:text="@string/editText1"
            android:ems="10"
            android:id="@+id/editText"/>

</GridLayout>