<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
        <TextView
                android:text="@string/textView1"
                android:textSize="30sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/textView"/>
    </LinearLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

        <Button
                android:layout_weight="100"
                android:gravity="fill"
                android:text="@string/button2"
                android:textAlignment="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/button2"/>
        <ImageButton
                android:gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" app:srcCompat="@drawable/flag" android:id="@+id/imageButton"
                android:layout_weight="1"/>
    </LinearLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
        <CheckBox
                android:text="@string/checkbox1"
                android:gravity="fill"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/checkBox" android:layout_weight="1"/>
        <Switch
                android:text="@string/switch1"
                android:gravity="fill"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/switch1" android:layout_weight="1"/>

    </LinearLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
        <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:text="@string/editText1"
                android:ems="10"
                android:id="@+id/editText"/>
    </LinearLayout>

</LinearLayout>